# DH-acc

./: CMakeLists.txt  README.txt
doc/: ACS2DS.txt  C.txt  DS.txt
inc/: a_zdoom.h  ctype.dh  ctype.h  ds_def.h  inttypes.h  malloc.dh  memops.dh  stdarg.h  stddef.h  stdio.h  stdlib.dh  stdlib.h  string.dh  string.h  z_zone.dh  z_zone.h  zbuiltin.acs  zbuiltin.dh  zcommon.acs  zcommon.dh  zdefs.acs  zdefs.dh  znative.acs  znative.dh  zspawnid.dh  zspecial.acs  zspecial.dh
lib/: ctype.ds  malloc.ds  memops.ds  stdio.ds  stdlib.ds  string.ds  z_zone.c  z_zone.ds
src/: ACSP.hpp  BinaryTokenACS.cpp  BinaryTokenACS.hpp  BinaryTokenNTS.cpp  BinaryTokenNTS.hpp  BinaryTokenPPACS.cpp  BinaryTokenPPACS.hpp  BinaryTokenZDACS.cpp  BinaryTokenZDACS.hpp  CMakeLists.txt  Counter.hpp  CounterPointer.hpp  CounterPointer.inline.hpp  KWRD.hpp  Keyword.cpp  Keyword.hpp  LinkSpec.cpp  LinkSpec.hpp  OCODE.hpp  ObjectArchive.cpp  ObjectArchive.hpp  ObjectCode.cpp  ObjectCode.hpp  ObjectData.cpp  ObjectData.hpp  ObjectExpression.cpp  ObjectExpression.hpp  ObjectToken.cpp  ObjectToken.hpp  ObjectVector.cpp  ObjectVector.hpp  SourceBlockC.cpp  SourceBlockC.hpp  SourceContext.cpp  SourceContext.hpp  SourceContextC.hpp  SourceException.cpp  SourceException.hpp  SourceExpression.cpp  SourceExpression.hpp  (+48 more)
src/BinaryToken/: make_tokens.hpp  make_tokens_macros.hpp
src/BinaryTokenACS/: make_tokens.cpp  make_tokens.hpp  output.cpp  write_ACS0.cpp
src/BinaryTokenPPACS/: make_tokens.cpp  output.cpp  write_ACSP.cpp
src/BinaryTokenZDACS/: make_tokens.cpp  output.cpp  write_ACSE.cpp
src/ObjectData/: Array.cpp  ArrayVar.cpp  Auto.cpp  Function.cpp  Label.cpp  Register.cpp  Script.cpp  Static.cpp  String.cpp
src/ObjectExpression/: Archive.cpp  Base.cpp  Base.hpp  Binary.cpp  Binary.hpp  BinaryAdd.cpp  BinaryAnd.cpp  BinaryCmp.cpp  BinaryDiv.cpp  BinaryIOr.cpp  BinaryLSh.cpp  BinaryMod.cpp  BinaryMul.cpp  BinaryRSh.cpp  BinarySub.cpp  BinaryXOr.cpp  BranchAnd.cpp  BranchIOr.cpp  BranchIf.cpp  BranchNot.cpp  BranchXOr.cpp  Cast.cpp  Unary.cpp  Unary.hpp  UnaryAdd.cpp  UnaryLogNot.cpp  UnaryNot.cpp  UnarySub.cpp  Value.hpp  ValueARR.cpp  ValueCast.cpp  ValueCompound.cpp  ValueFIX.cpp  ValueFLT.cpp  ValueFloat.cpp  ValueINT.cpp  ValueInt.cpp  ValueInt32.cpp  ValueOCS.cpp  ValueOCode.cpp  (+7 more)
src/SourceContext/: getVariableType.cpp
src/SourceExpression/: Binary.cpp  Binary.hpp  BinaryAdd.cpp  BinaryAnd.cpp  BinaryArray.cpp  BinaryAssign.cpp  BinaryCmp.cpp  BinaryCompare.cpp  BinaryCompare.hpp  BinaryDiv.cpp  BinaryEQ.cpp  BinaryGE.cpp  BinaryGT.cpp  BinaryIOr.cpp  BinaryLE.cpp  BinaryLSh.cpp  BinaryLT.cpp  BinaryMod.cpp  BinaryMul.cpp  BinaryNE.cpp  BinaryPair.cpp  BinaryRSh.cpp  BinaryShift.cpp  BinarySub.cpp  BinaryXOr.cpp  BranchAnd.cpp  BranchBreak.cpp  BranchCall.cpp  BranchContinue.cpp  BranchFor.cpp  BranchGoto.cpp  BranchIOr.cpp  BranchIf.cpp  BranchNot.cpp  BranchReturn.cpp  BranchSwitch.cpp  BranchWhile.cpp  BranchXOr.cpp  RootDelay.cpp  RootFunction.cpp  (+27 more)
src/SourceExpressionACS/: Base.cpp  BinaryAdd.cpp
src/SourceExpressionC/: ParseAttribute.cpp  ParseDeclaration.cpp  ParseExpression.cpp  ParseNumber.cpp  ParseStatement.cpp
src/SourceExpressionDS/: Base.cpp  Base.hpp  Binary.cpp  Binary.hpp  BinaryAdd.cpp  BinaryArray.cpp  BinaryAssign.cpp  BinaryDiv.cpp  BinaryMod.cpp  BinaryMul.cpp  BinarySub.cpp  CastACSFunc.cpp  CastArray.cpp  CastChar.cpp  CastFixed.cpp  CastInt.cpp  CastLnSpec.cpp  CastNative.cpp  CastReal.cpp  CastScript.cpp  CastString.cpp  CastStruct.cpp  RootBlock.cpp  RootCall.cpp  RootData.cpp  RootDelay.cpp  RootIf.cpp  RootLSpec.cpp  RootOut.cpp  RootReturn.cpp  RootTerm.cpp  RootVoid.cpp  RootWhile.cpp  ValueFixed.cpp  ValueInt.cpp  ValueMember.cpp  ValueScript.cpp  ValueString.cpp  ValueVariable.cpp  arglist.cpp  (+28 more)
src/SourceTokenizerC/: getExpr.cpp
src/SourceVariable/: VariableType.cpp  makeObject.cpp  makeObjectsAccess.cpp  makeObjectsAddress.cpp  makeObjectsCall.cpp  makeObjectsGet.cpp  makeObjectsSet.cpp  print_debug.cpp
src/Type/: Archive.cpp  Array.cpp  Array.hpp  Bitfield.cpp  Bitfield.hpp  Boolean.cpp  Boolean.hpp  Char.cpp  Char.hpp  Class.cpp  Class.hpp  Enum.cpp  Enum.hpp  Fixed.cpp  Fixed.hpp  Floating.cpp  Floating.hpp  Function.cpp  Function.hpp  Integer.cpp  Integer.hpp  MemFunc.cpp  MemFunc.hpp  MemPtr.cpp  MemPtr.hpp  Pointer.cpp  Pointer.hpp  Tuple.cpp  Tuple.hpp  Void.cpp  Void.hpp  Wrapper.hpp
