add_executable(DH-acc
	main.cpp

	bignum.cpp
	BinaryTokenACS.cpp
	BinaryTokenACS/make_tokens.cpp
	BinaryTokenACS/output.cpp
	BinaryTokenACS/write_ACS0.cpp
	BinaryTokenPPACS.cpp
	BinaryTokenPPACS/make_tokens.cpp
	BinaryTokenPPACS/output.cpp
	BinaryTokenPPACS/write_ACSP.cpp
	BinaryTokenZDACS.cpp
	BinaryTokenZDACS/make_tokens.cpp
	BinaryTokenZDACS/output.cpp
	BinaryTokenZDACS/write_ACSE.cpp
	ObjectCode.cpp
	ObjectData.cpp
   ObjectData/Script.cpp
	ObjectData/String.cpp
	ObjectExpression.cpp
	ObjectExpression/Binary.cpp
	ObjectExpression/BinaryAdd.cpp
	ObjectExpression/BinaryAnd.cpp
	ObjectExpression/BinaryDiv.cpp
	ObjectExpression/BinaryIOr.cpp
	ObjectExpression/BinaryMod.cpp
	ObjectExpression/BinaryMul.cpp
	ObjectExpression/BinarySub.cpp
	ObjectExpression/BinaryXOr.cpp
   ObjectExpression/BranchAnd.cpp
   ObjectExpression/BranchIOr.cpp
   ObjectExpression/BranchNot.cpp
   ObjectExpression/BranchXOr.cpp
   ObjectExpression/Cast.cpp
	ObjectExpression/do_deferred_allocation.cpp
	ObjectExpression/iter.cpp
	ObjectExpression/objects_io.cpp
	ObjectExpression/Unary.cpp
	ObjectExpression/UnaryAdd.cpp
	ObjectExpression/UnarySub.cpp
   ObjectExpression/ValueCompound.cpp
	ObjectExpression/ValueFloat.cpp
	ObjectExpression/ValueInt.cpp
	ObjectExpression/ValueOCode.cpp
	ObjectExpression/ValueSymbol.cpp
	ObjectToken.cpp
	ObjectVector.cpp
	object_io.cpp
	option.cpp
	ost_type.cpp
#	SourceBlockC.cpp
	SourceContext.cpp
	SourceContext/getVariableType.cpp
	SourceException.cpp
	SourceExpression.cpp
	SourceExpression/Binary.cpp
	SourceExpression/BinaryAdd.cpp
	SourceExpression/BinaryAnd.cpp
	SourceExpression/BinaryArray.cpp
	SourceExpression/BinaryAssign.cpp
	SourceExpression/BinaryCompare.cpp
	SourceExpression/BinaryDiv.cpp
	SourceExpression/BinaryEQ.cpp
	SourceExpression/BinaryGE.cpp
	SourceExpression/BinaryGT.cpp
	SourceExpression/BinaryIOr.cpp
	SourceExpression/BinaryLE.cpp
   SourceExpression/BinaryLSh.cpp
	SourceExpression/BinaryLT.cpp
	SourceExpression/BinaryMod.cpp
	SourceExpression/BinaryMul.cpp
	SourceExpression/BinaryNE.cpp
   SourceExpression/BinaryRSh.cpp
	SourceExpression/BinarySub.cpp
	SourceExpression/BinaryXOr.cpp
	SourceExpression/BranchAnd.cpp
	SourceExpression/BranchCall.cpp
	SourceExpression/BranchFor.cpp
	SourceExpression/BranchGoto.cpp
	SourceExpression/BranchIf.cpp
	SourceExpression/BranchIOr.cpp
	SourceExpression/BranchNot.cpp
	SourceExpression/BranchReturn.cpp
	SourceExpression/BranchSwitch.cpp
	SourceExpression/BranchWhile.cpp
	SourceExpression/BranchXOr.cpp
	SourceExpression/make_objects_call.cpp
	SourceExpression/make_objects_call_asmfunc.cpp
	SourceExpression/make_objects_call_function.cpp
	SourceExpression/make_objects_call_linespec.cpp
	SourceExpression/make_objects_call_native.cpp
	SourceExpression/make_objects_call_script.cpp
	SourceExpression/make_objects_cast.cpp
	SourceExpression/make_objects_memcpy.cpp
	SourceExpression/RootDelay.cpp
	SourceExpression/RootOutput.cpp
   SourceExpression/RootPrintf.cpp
	SourceExpression/RootScript.cpp
	SourceExpression/Unary.cpp
	SourceExpression/UnaryDecInc.cpp
	SourceExpression/UnaryDereference.cpp
	SourceExpression/UnaryNot.cpp
	SourceExpression/UnaryReference.cpp
	SourceExpression/UnarySub.cpp
	SourceExpression/ValueBlock.cpp
	SourceExpression/ValueCast.cpp
	SourceExpression/ValueData.cpp
	SourceExpression/ValueMember.cpp
	SourceExpression/ValueVariable.cpp
#	SourceExpressionACS.cpp
#	SourceExpressionACS/Base.cpp
#	SourceExpressionACS/BinaryAdd.cpp
	SourceExpressionDS.cpp
   SourceExpressionDS/create_value_number.cpp
	SourceExpressionDS/make_expression_single.cpp
	SourceExpressionDS/make_expression_single_asmfunc.cpp
	SourceExpressionDS/make_expression_single_do.cpp
	SourceExpressionDS/make_expression_single_extern.cpp
	SourceExpressionDS/make_expression_single_for.cpp
	SourceExpressionDS/make_expression_single_function.cpp
	SourceExpressionDS/make_expression_single_goto.cpp
	SourceExpressionDS/make_expression_single_if.cpp
	SourceExpressionDS/make_expression_single_linespec.cpp
	SourceExpressionDS/make_expression_single_native.cpp
   SourceExpressionDS/make_expression_single_printf.cpp
	SourceExpressionDS/make_expression_single_script.cpp
	SourceExpressionDS/make_expression_single_switch.cpp
	SourceExpressionDS/make_expression_single_symbol.cpp
	SourceExpressionDS/make_expression_single_variable.cpp
	SourceExpressionDS/make_expression_type.cpp
	SourcePosition.cpp
	SourceStream.cpp
	SourceTokenASMPLX.cpp
	SourceTokenC.cpp
#  SourceTokenizerC.cpp
	SourceTokenizerDS.cpp
	SourceVariable.cpp
	VariableData.cpp
	VariableType.cpp
)


